--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
-    <h1>hello top of root</h1>
     <div id ="root">
-
+<div>I'm Aks</div> 
+<!-- this will be replaced by root in app.js -->
     </div>
-<h2>hello bottom of root</h2>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="./app.js">
+
+<script type ="module" src="./src/app.js">
 
   
 </script>
